Added Battle Tank Camera Controls

--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ DerivedDataCache/*
 
 # Ignore Starter Content
 Content/StarterContent/*
-
+Content/SpringLandscape/*
 ### UnrealEngine Patch ###
 # Don't ignore icon and splash images for mobile app
 !Build/IOS/Resources/
