Updated to 4.25. Changed Barrel and Turret to access private methods using Getter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 		"E:/Unreal_Games/BattleTank/.git": true,
 		"E:/Unreal_Games/BattleTank/.vscode": true,
 		"E:/Unreal_Games/BattleTank/Content": true,
+		"E:/Unreal_Games/BattleTank/DerivedDataCache": true,
 		"E:/Unreal_Games/BattleTank/Intermediate": true,
 		"E:/Unreal_Games/BattleTank/Package": true,
 		"E:/Unreal_Games/BattleTank/Saved": true
