--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,114 +5,114 @@
 			"name": "BattleTank (Debug)",
 			"request": "launch",
 			"preLaunchTask": "BattleTank Win64 Debug Build",
-			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\BattleTank-Win64-Debug.exe",
+			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\UE4-Win64-Debug.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.22",
+			"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "BattleTank (DebugGame)",
 			"request": "launch",
 			"preLaunchTask": "BattleTank Win64 DebugGame Build",
-			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\BattleTank-Win64-DebugGame.exe",
+			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\UE4-Win64-DebugGame.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.22",
+			"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "BattleTank (Development)",
 			"request": "launch",
 			"preLaunchTask": "BattleTank Win64 Development Build",
-			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\BattleTank.exe",
+			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\UE4.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.22",
+			"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "BattleTank (Shipping)",
 			"request": "launch",
 			"preLaunchTask": "BattleTank Win64 Shipping Build",
-			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\BattleTank-Win64-Shipping.exe",
+			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\UE4-Win64-Shipping.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.22",
+			"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "BattleTank (Test)",
 			"request": "launch",
 			"preLaunchTask": "BattleTank Win64 Test Build",
-			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\BattleTank-Win64-Test.exe",
+			"program": "E:\\Unreal_Games\\BattleTank\\Binaries\\Win64\\UE4-Win64-Test.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.22",
+			"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "BattleTankEditor (Debug)",
 			"request": "launch",
 			"preLaunchTask": "BattleTankEditor Win64 Debug Build",
-			"program": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Binaries\\Win64\\UE4Editor-Win64-Debug.exe",
+			"program": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-Debug.exe",
 			"args": [
 				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject"
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.22",
+			"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "BattleTankEditor (DebugGame)",
 			"request": "launch",
 			"preLaunchTask": "BattleTankEditor Win64 DebugGame Build",
-			"program": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Binaries\\Win64\\UE4Editor.exe",
+			"program": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-DebugGame.exe",
 			"args": [
 				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject"
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.22",
+			"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "BattleTankEditor (Development)",
 			"request": "launch",
 			"preLaunchTask": "BattleTankEditor Win64 Development Build",
-			"program": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Binaries\\Win64\\UE4Editor.exe",
+			"program": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor.exe",
 			"args": [
 				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject"
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.22",
+			"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "Generate Project Files",
 			"type": "clr",
 			"request": "launch",
-			"program": "C:\\Program Files\\Epic Games\\UE_4.22\\Engine\\Binaries\\DotNET\\UnrealBuildTool.exe",
+			"program": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25\\Engine\\Binaries\\DotNET\\UnrealBuildTool.exe",
 			"console": "externalTerminal",
 			"args": [
 				"-projectfiles",
@@ -122,7 +122,7 @@
 				"-engine"
 			],
 			"internalConsoleOptions": "openOnSessionStart",
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+			"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 		}
 	]
 }
