--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -35,7 +35,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -52,7 +52,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -69,7 +69,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -89,7 +89,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -106,7 +106,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -123,7 +123,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -143,7 +143,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -160,7 +160,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -177,7 +177,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -197,7 +197,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -214,7 +214,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -231,7 +231,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -251,7 +251,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -268,7 +268,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -285,7 +285,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -305,7 +305,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -322,7 +322,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -339,7 +339,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -359,7 +359,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -376,7 +376,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -393,7 +393,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -413,7 +413,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -430,7 +430,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -447,7 +447,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -467,7 +467,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -484,7 +484,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -501,7 +501,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -521,7 +521,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -538,277 +538,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Debug Build",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Debug",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Debug Rebuild",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Debug",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"dependsOn": [
-				"BattleTank HTML5 Debug Clean"
-			],
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Debug Clean",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Clean.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Debug",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 DebugGame Build",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"DebugGame",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 DebugGame Rebuild",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"DebugGame",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"dependsOn": [
-				"BattleTank HTML5 DebugGame Clean"
-			],
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 DebugGame Clean",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Clean.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"DebugGame",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Development Build",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Development",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Development Rebuild",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Development",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"dependsOn": [
-				"BattleTank HTML5 Development Clean"
-			],
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Development Clean",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Clean.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Development",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Shipping Build",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Shipping",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Shipping Rebuild",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Shipping",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"dependsOn": [
-				"BattleTank HTML5 Shipping Clean"
-			],
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Shipping Clean",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Clean.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Shipping",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Test Build",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Test",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Test Rebuild",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Build.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Test",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"dependsOn": [
-				"BattleTank HTML5 Test Clean"
-			],
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
-			}
-		},
-		{
-			"label": "BattleTank HTML5 Test Clean",
-			"group": "build",
-			"command": "Engine\\Build\\BatchFiles\\Clean.bat",
-			"args": [
-				"BattleTank",
-				"HTML5",
-				"Test",
-				"E:\\Unreal_Games\\BattleTank\\BattleTank.uproject",
-				"-waitmutex"
-			],
-			"problemMatcher": "$msCompile",
-			"type": "shell",
-			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -825,7 +555,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -845,7 +575,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -862,7 +592,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -879,7 +609,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -899,7 +629,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -916,7 +646,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -933,7 +663,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -953,7 +683,7 @@
 			],
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		},
 		{
@@ -970,7 +700,7 @@
 			"problemMatcher": "$msCompile",
 			"type": "shell",
 			"options": {
-				"cwd": "C:\\Program Files\\Epic Games\\UE_4.22"
+				"cwd": "E:\\Unreal_Games\\UnrealEngine\\UE_4.25"
 			}
 		}
 	]
