--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -94,15 +94,15 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="FireGun",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="FireGun",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
++ActionMappings=(ActionName="FireGun",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="AimElevation",Scale=-1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
-+AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Left Track Throttle",Scale=-0.500000,Key=Gamepad_LeftShoulder)
++AxisMappings=(AxisName="Right Track Throttle",Scale=-0.500000,Key=Gamepad_RightShoulder)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
